--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
         "@symfony/webpack-encore": "^1.0.0",
         "bootstrap": "^4.6.0",
         "core-js": "^3.0.0",
+        "file-loader": "^6.0.0",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.32.8",
+        "sass-loader": "^11.0.1",
         "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
     },
@@ -20,7 +22,5 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
-    "dependencies": {
-        "sass-loader": "^11.0.1"
-    }
+    "dependencies": {}
 }
